# hoehetis.nl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bootstrap.sh  build.sh  db.sh  deploy.sh  docker-compose.yml  freq.sh  graph.sh  result.xml  run.sh  test.sh  test.xml
infra/: .terraform.lock.hcl  main.tf  providers.tf
old/: db.pkl  db.pkl.larger  db.pkl.small  deploy.sh  downloadLog.sh  profile.sh
old/src/: entries.py  gen_profile.py
old/src/__pycache__/: entries.cpython-33.pyo
old/src/templates/: index.html
public/: index.html
public/data/: 2023-11-06.json  2023-11-07.json  2023-11-13.json  2023-11-14.json  2023-11-15.json  2023-11-16.json  2023-11-17.json  2023-11-18.json  2023-11-19.json  2023-11-20.json  2023-11-21.json  2023-11-22.json  2023-11-23.json  2023-11-24.json  2023-11-26.json  2023-11-27.json  2023-11-28.json  2023-11-29.json  2023-11-30.json  2023-12-01.json  2023-12-02.json  2023-12-03.json  2023-12-04.json  2023-12-05.json  2023-12-06.json  2023-12-07.json  2023-12-08.json  2023-12-09.json  2023-12-10.json  2023-12-11.json  2023-12-12.json  2023-12-13.json  2023-12-14.json  2023-12-15.json  2023-12-16.json  2023-12-17.json  2023-12-18.json  2023-12-19.json  2023-12-20.json  2023-12-21.json  (+12 more)
src/: db.rs  entries.py  freq.py  freq_test.py  gen.py  gen_test.py  graph.py  graph_test.py  main.rs  mapping.py  mapping_test.py
src/templates/: app.js  gchart.html  index.html
