[package]
name = "hoehetis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.14.3"
canyon_sql = "0.4.2"
duckdb = { version = "0.9.0", features = ["bundled"] }
feed-rs = "1.3.0"
gcp-bigquery-client = "0.17.1"
html5ever = "0.26.0"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
soup = "0.5.1"
tokio = { version = "1.32.0", features = ["full"] }
